--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ sympy==1.13.2
 tenacity==8.5.0
 toml==0.10.2
 torch==2.4.0
+torchaudio==2.4.0
 torchvision==0.19.0
 tornado==6.4.1
 typing_extensions==4.12.2
