--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,12 @@ fsspec==2024.6.1
 gitdb==4.0.11
 GitPython==3.1.43
 idna==3.7
+imageio==2.35.0
 Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
+lazy_loader==0.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.2
@@ -25,26 +27,35 @@ mdurl==0.1.2
 mpmath==1.3.0
 narwhals==1.4.2
 networkx==3.3
+ninja==1.11.1.1
 numpy==1.26.4
+opencv-python-headless==4.10.0.84
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
 protobuf==5.27.3
 pyarrow==17.0.0
+pyclipper==1.3.0.post5
 pydeck==0.9.1
 Pygments==2.18.0
 pyparsing==3.1.2
+python-bidi==0.6.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
+PyYAML==6.0.2
 referencing==0.35.1
 requests==2.32.3
 rich==13.7.1
 rpds-py==0.20.0
+scikit-image==0.24.0
+scipy==1.14.0
+shapely==2.0.5
 six==1.16.0
 smmap==5.0.1
 streamlit==1.37.1
 sympy==1.13.2
 tenacity==8.5.0
+tifffile==2024.8.10
 toml==0.10.2
 torch==2.4.0
 torchaudio==2.4.0
