--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,13 @@ click==8.1.7
 colorama==0.4.6
 contourpy==1.2.1
 cycler==0.12.1
+easyocr==1.7.1
 filelock==3.15.4
 fonttools==4.53.1
 fsspec==2024.6.1
 gitdb==4.0.11
 GitPython==3.1.43
+huggingface-hub==0.24.5
 idna==3.7
 imageio==2.35.0
 Jinja2==3.1.4
@@ -44,9 +46,11 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.2
 referencing==0.35.1
+regex==2024.7.24
 requests==2.32.3
 rich==13.7.1
 rpds-py==0.20.0
+safetensors==0.4.4
 scikit-image==0.24.0
 scipy==1.14.0
 shapely==2.0.5
@@ -56,11 +60,14 @@ streamlit==1.37.1
 sympy==1.13.2
 tenacity==8.5.0
 tifffile==2024.8.10
+tokenizers==0.19.1
 toml==0.10.2
 torch==2.4.0
 torchaudio==2.4.0
 torchvision==0.19.0
 tornado==6.4.1
+tqdm==4.66.5
+transformers==4.44.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
